--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,6 +9,7 @@
 
         <!-- http://getbootstrap.com/docs/4.5/ -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        <link rel="stylesheet" href="/static/styles.css">
 
         <!-- http://getbootstrap.com/docs/4.5/ -->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -18,10 +19,8 @@
 
     </head>
 
-    <body>
-        <main class="container p-5">
-            {% block main %}{% endblock %}
-        </main>
+    <body >
+        {% block body %}{% endblock %}
     </body>
 
 </html>
