--- a/templates/index.html
+++ b/templates/index.html
@@ -25,8 +25,11 @@
 						{% endif %}
 					<br>
 					{% else %}
-					<b>{{meeting["teacher"]}}<br></b>
+					{% if meeting["teacher"] is not none %}
+					<b>{{meeting["teacher"]}}</b>
 					{% endif %}
+					{% endif %}
+					<br>
 					{% if meeting["type"] == 0 %}
 					MID:&nbsp;{{meeting["mid"]}}
 					<br>Passcode:&nbsp;{{meeting["passcode"]}}
