--- a/static/styles.css
+++ b/static/styles.css
@@ -93,6 +93,11 @@ h2 {
 	margin: 0px;
 }
 
+
+.zoom {
+	background: #cad9e5;
+}
+
 .zoom:hover > .card_alt_title {
 	background-image: linear-gradient(150deg, rgb(15, 68, 167) -151.1%, rgb(101, 194, 207) -51.1%, rgb(15, 68, 167) 48.9%);
 	-webkit-text-fill-color: transparent;
@@ -100,6 +105,13 @@ h2 {
 }
 
 .gmeet {
+	background: #d2e4ce;
+}
+
+.gmeet:hover >.card_alt_title {
+	background-image: linear-gradient(150deg, rgb(17, 130, 91) -89.8%, rgb(105, 205, 116) 10.2%, rgb(17, 130, 91) 110.2%);
+	-webkit-text-fill-color: transparent;
+	-webkit-background-clip: text;
 }
 
 
@@ -107,15 +119,15 @@ h2 {
 
 /* "Add meeting" card */
 .background_card_create {
-	background-color: #fff;
+	background-color: #f8d3cc;
 }
 
 .background_card_create:hover {
-	background-color: #836BB7;
+	background-color: #b0304e;
 }
 
 .background_card_create:hover > .foreground_card_create {
-	color: #fff;
+	color: #f8d3cc;
 }
 
 .foreground_card_create {
@@ -123,7 +135,7 @@ h2 {
 	border-style: dashed;
 	border-width: var(--border-width);
 	background-color:(0,0,0,0);
-	color: #836BB7;
+	color: #b0304e;
 	text-align: center;
 }
 
