Final Theme Meeting Cards

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,11 @@
 {% endblock %}
 
 {% block body %}
-    <div class="section">
+    <div class="title-margin">
         <h2>Welcome home!</h2>
-        <div class="fullwidth meetings">
+    </div>
+    <div class="lt-margin-carousel">
+        <div class="card-carousel meetings">
 		    {% if meetings is not none %}
 		    {% for meeting in meetings %}
 		    {% if meeting["type"] == 0 %}
@@ -15,7 +17,7 @@
 		    {% else %}
 		    <div class="card_alt gmeet">
 		    {% endif %}
-				<p class="card_alt_title">At {{meeting["time"]}}</p>
+				<p class="card_alt_title">At&nbsp;{{meeting["time"]}}</p>
 
 				<p class="card_alt_text">
 					{% if meeting["subject"] is not none %}
@@ -28,18 +30,18 @@
 					{% if meeting["teacher"] is not none %}
 					<b>{{meeting["teacher"]}}</b>
 					{% endif %}
-					{% endif %}
 					<br>
+					{% endif %}
 					{% if meeting["type"] == 0 %}
 					MID:&nbsp;{{meeting["mid"]}}
 					<br>Passcode:&nbsp;{{meeting["passcode"]}}
 					{% else %}
-					Code:&nbsp;{{meeting["gmeet_code"]}}
+					Code:&nbsp;{{meeting["gmeet_code"]}}<br><br>
 					{% endif %}
 				</p>
 
 				<a href="{{meeting["link"]}}">
-					<p class="card_alt_text">Join <svg class="upright" viewBox="0 0 80 80" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
+					<p class="card_alt_text join-button">Join <svg class="upright" viewBox="0 0 80 80" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
   <path d="M60.2051 44.3359L60.2051 6.25C60.2051 2.53912 57.7148 0 53.9551 0L15.8691 0C12.3535 0 9.7168 2.63672 9.7168 5.85937C9.7168 8.98437 12.4512 11.5234 15.8203 11.5234L29.1504 11.5234L41.5039 10.9863L34.7656 16.9434L2.00195 49.7559C0.732422 51.0254 0 52.5879 0 54.1504C0 57.2754 2.88086 60.2051 6.05469 60.2051C7.61719 60.2051 9.13086 59.4727 10.4492 58.2031L43.2617 25.4394L49.2188 18.7012L48.6816 30.9082L48.6816 44.3848C48.6816 47.7539 51.123 50.4394 54.3457 50.4394C57.5684 50.4394 60.2051 47.7539 60.2051 44.3359L60.2051 44.3359Z" id="Shape" fill-rule="evenodd" stroke="none" />
 </svg></p>
 				</a>
@@ -49,7 +51,7 @@
     	</div>
 
         <!-- static block of "add meeting"-->
-        <div class="fullwidth static_add">
+        <div class="card-carousel static_add">
             <div class="margin">
     		    <div class="card_alt background_card_create">
     			    <div class="card_alt_inner foreground_card_create">
