--- a/static/styles.css
+++ b/static/styles.css
@@ -33,15 +33,13 @@ html { font-family: "Inter", sans-serif; }
 }
 
 
-
-
-
+/* HTML Tag Selections */
 
 h2 {
-	font-weight: 600;
+	font-weight: 700;
 	letter-spacing: -0.040em;
+	font-size: 60px;
 }
-
 body {
  	font-size: 17px;
     line-height: 1.47059;
@@ -52,21 +50,23 @@ body {
     font-style:normal;
 	font-family: "Inter", "Inter var", sans-serif;
 }
-
 a {
 	color: #0068d1;
 	text-decoration: none;
 }
-
 a:hover {
 	color: #147ce5;
 	text-decoration: none;
 }
 
 
+/* Independent Text */
+
+
 
 
 /* All card rules */
+
 .card_alt {
 	border-radius: var(--outer-card-radius);
 	min-width: var(--outer-card-width);
@@ -75,12 +75,10 @@ a:hover {
 	box-shadow: 2px 4px 12px rgba(0, 0, 0, .08);
 	transition:all .3s cubic-bezier(0, 0, .5, 1);
 }
-
 .card_alt:hover {
 	box-shadow: 2px 4px 16px rgba(0, 0, 0, .16);
 	transform:scale3d(1.01, 1.01, 1.01);
 }
-
 .card_alt_inner {
 	position: absolute;
 	margin-left: var(--inner-card-margin-left);
@@ -88,19 +86,30 @@ a:hover {
 	min-width: var(--inner-card-width);
 	min-height: var(--inner-card-height);
 }
-
 .card_alt_title {
 	font-size: 3rem;
-	font-weight: 600;
-	margin: 0px;
+	font-weight: 700;
+	letter-spacing: -0.040em;
 }
-
 .card_alt_text {
 	max-width: var(--inner-card-width);
 	font-weight: normal;
 	padding: 0px;
-	margin: 0px;
+	margin: 0px 0px 0px 1rem;
 }
+.card-carousel {
+	width: 100%;
+	display: flex;
+	align-items: flex-start;
+	overflow-x: auto;
+}
+.lt-margin-carousel {
+	margin-left: clamp(15px, 20vw, 500px);
+}
+.join-button {
+	margin-left: calc(var(--outer-card-width) - 6ch - 0.8rem);
+}
+
 
 
 
@@ -108,31 +117,36 @@ a:hover {
 
 .zoom {
 	background: #cad9e5;
+	border-style: solid;
+	color: #142864;
 }
-
+.zoom > .card_alt_title {
+	margin: 0px 0px -0.4rem 1rem;
+}
 .zoom:hover > .card_alt_title {
-	background-image: linear-gradient(150deg, rgb(15, 68, 167) -151.1%, rgb(101, 194, 207) -51.1%, rgb(15, 68, 167) 48.9%);
+	background-image: linear-gradient(150deg, rgb(15, 68, 167) -98.58%, rgb(101, 194, 207) 1.42%, rgb(15, 68, 167) 101.42%);
 	-webkit-text-fill-color: transparent;
 	-webkit-background-clip: text;
 }
-
 .gmeet {
 	background: #d2e4ce;
+	border-style: solid;
+	color: #04756e;
 }
-
+.gmeet > .card_alt_title {
+	margin: 0px 0px -0.3rem 1rem;
+}
 .gmeet:hover >.card_alt_title {
 	background-image: linear-gradient(150deg, rgb(17, 130, 91) -89.8%, rgb(105, 205, 116) 10.2%, rgb(17, 130, 91) 110.2%);
 	-webkit-text-fill-color: transparent;
 	-webkit-background-clip: text;
 }
-
 .upright {
 	max-height: 0.8rem;
 	margin: 0.1rem 0px 0px 0px;
 	color: #0068d1;
 	fill: #0068d1;
 }
-
 .upright:hover {
 	color: #147ce5;
 	fill: #147ce5;
@@ -140,19 +154,17 @@ a:hover {
 
 
 
+
 /* "Add meeting" card */
 .background_card_create {
 	background-color: #f8d3cc;
 }
-
 .background_card_create:hover {
 	background-color: #b0304e;
 }
-
 .background_card_create:hover > .foreground_card_create {
 	color: #f8d3cc;
 }
-
 .foreground_card_create {
 	border-radius: var(--inner-card-radius);
 	border-style: dashed;
@@ -161,7 +173,6 @@ a:hover {
 	color: #b0304e;
 	text-align: center;
 }
-
 .create_maintext {
 	margin-top: 0px;
 	margin-bottom: 0px;
@@ -172,20 +183,10 @@ a:hover {
 	margin-top: var(--create-card-space);
 	margin-bottom: 4px;
 }
-
 .link-cover {
 	position:absolute;
 	width: var(--outer-card-width);
 	height: var(--outer-card-height);
 	z-index: 5;
 	border-radius: 18px;
-}
-
-
-/* Testing for full width divs */
-.fullwidth {
-	width: 100%;
-	display: flex;
-	align-items: flex-start;
-	overflow-x: auto;
 }
