Remove Canela; Cleanup

--- a/static/styles.css
+++ b/static/styles.css
@@ -24,7 +24,7 @@
 
 /* HTML Tag Selections */
 h2 {
-	font-family: "Canela-Bold", "Canela Bold", "Canela", "SFProDisplay";
+	font-family: "SFProDisplay";
 	font-weight: bold;
 	font-size: 50px;
 }
