--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,9 @@
 	    <p class="carousel-title">My Meetings <svg class="down-arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 80">
 	    	<path d="M28.76,0a2.87,2.87,0,0,0-3,3V54.79L26,63,15.19,51.12,5,41.11a3.16,3.16,0,0,0-2.15-.83A2.84,2.84,0,0,0,0,43.21a3,3,0,0,0,.93,2.15L26.51,71A3,3,0,0,0,31,71L56.59,45.36a3,3,0,0,0,.93-2.15,2.84,2.84,0,0,0-2.88-2.93,3.07,3.07,0,0,0-2.15.83l-10.16,10L31.49,62.94l.25-8.15V3A2.87,2.87,0,0,0,28.76,0Z"/>
 </svg>
+			<a href="/edit">
+				<p class="carousel-title">Edit <svg class="upright" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 80"><path d="M34.57,30.47a1.8,1.8,0,0,0-.68-1.42L3.08.49A1.77,1.77,0,0,0,1.81,0,1.76,1.76,0,0,0,0,1.76,1.74,1.74,0,0,0,.49,3L30.13,30.47.49,58A1.65,1.65,0,0,0,0,59.18a1.76,1.76,0,0,0,1.81,1.76,1.77,1.77,0,0,0,1.27-.49L33.89,31.88A1.8,1.8,0,0,0,34.57,30.47Z"/></svg></p>
+			</a>
 	    </p>
         <div class="card-carousel">
 		    {% for meeting in meetings %}
